--- a/assets/less/components.less
+++ b/assets/less/components.less
@@ -1,5 +1,5 @@
 .form__btn {
-  margin: 22px 0;
+  margin: 22px auto;
   padding: 10px 0;
   background-color: @red;
   text-align: center;
@@ -8,6 +8,7 @@
 
   a {
     .font (18px, 1, #fff, left);
+    font-weight: 700;
     text-decoration: none;
     text-transform: uppercase;
   }
